--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,7 @@
 {
+  "extends": "@mistjs/tsconfig-vue",
   "compilerOptions": {
-    "removeComments": true,
-    "sourceMap": false,
-    "target": "es6",
-    "module": "ESNext",
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "lib": ["ESNext"],
-    "outDir": "dist",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
-  },
-  "include": ["**/*.ts"],
-  "exclude": ["**/node_modules"]
+    "resolveJsonModule": true
+  }
 }
