--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
 
       - run: npx changelogithub
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.TOKEN}}
 
       - name: Install Dependencies
         run: pnpm i
@@ -41,10 +41,3 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           NPM_CONFIG_PROVENANCE: true
-
-      - name: Publish to VSCE & OVSX
-        run: npm run publish
-        working-directory: ./packages/vscode
-        env:
-          VSCE_TOKEN: ${{secrets.VSCE_TOKEN}}
-          OVSX_TOKEN: ${{secrets.OVSX_TOKEN}}
