--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dev:example": "vite dev example",
     "build:example": "vite build example",
     "preview:example": "vite preview example",
-    "build": "tsup"
+    "build": "tsup",
+    "release": "bumpp",
+    "changelog": "changelogen --output CHANGELOG.md"
   },
   "author": "filway <zhouxiaocr@gmail.com>",
   "files": [
@@ -45,6 +47,8 @@
     "@mistjs/tsconfig-vue": "^1.1.2",
     "@types/node": "^20.7.0",
     "@vitejs/plugin-vue": "^4.3.4",
+    "bumpp": "^9.2.0",
+    "changelogen": "^0.5.5",
     "eslint": "^8.50.0",
     "lint-staged": "^14.0.1",
     "simple-git-hooks": "^2.9.0",
@@ -56,7 +60,7 @@
     "vue": "^3.3.4"
   },
   "simple-git-hooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "*.{js,ts,tsx,vue,md}": [
