--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "build:example": "vite build example",
     "preview:example": "vite preview example",
     "build": "tsup",
-    "release": "bumpp",
-    "changelog": "changelogen --output CHANGELOG.md"
+    "release": "bumpp"
   },
   "author": "filway <zhouxiaocr@gmail.com>",
   "files": [
@@ -48,7 +47,6 @@
     "@types/node": "^20.7.0",
     "@vitejs/plugin-vue": "^4.3.4",
     "bumpp": "^9.2.0",
-    "changelogen": "^0.5.5",
     "eslint": "^8.50.0",
     "lint-staged": "^14.0.1",
     "simple-git-hooks": "^2.9.0",
