--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "./package.json": "./package.json",
     "./dist/*": "./dist/*"
   },
+  "packageManager": "pnpm@8.8.0",
   "scripts": {
+    "postinstall": "esno scripts/prepare.ts",
     "test": "vitest",
     "dev:example": "vite dev example",
     "build:example": "vite build example",
@@ -48,7 +50,10 @@
     "@vitejs/plugin-vue": "^4.3.4",
     "bumpp": "^9.2.0",
     "eslint": "^8.50.0",
+    "esno": "^0.17.0",
+    "execa": "^8.0.1",
     "lint-staged": "^14.0.1",
+    "pnpm": "8.8.0",
     "simple-git-hooks": "^2.9.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
